# koreader-sync-cf

./: .env  Cargo.toml  README.adoc  run.sh  schema.sql  wrangler.toml
src/: lib.rs
