[package]
name = "koreader-sync-cf"
version = "1.0.0"
edition = "2024"
authors = ["sprders <sprders@outlook.com>"]

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum',"d1"] }
worker-macros = { version = "0.6", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "=0.2.100"
serde = {version = "1.0.225",features = ["derive"]}
serde_json = "1.0.145"
js-sys = "=0.3.77"

[profile.release]
lto = true
strip = true
codegen-units = 1
